# mentci-lib

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE.md  README.md  flake.nix
examples/: handshake.rs
src/: cmd.rs  connection.rs  constructor.rs  diagnostics.rs  error.rs  event.rs  inspector.rs  layout.rs  lib.rs  schema.rs  state.rs  theme.rs  view.rs  wire.rs
src/canvas/: flow_graph.rs  mod.rs
src/connection/: driver.rs  mod.rs
